update appsuite-spring v0,0.32